--- a/AVFoundationSound/AudioInfo.plist
+++ b/AVFoundationSound/AudioInfo.plist
@@ -6,6 +6,8 @@
 	<dict>
 		<key>menuscenemusic</key>
 		<string></string>
+		<key>levelscenemusic</key>
+		<string></string>
 	</dict>
 	<key>sfx</key>
 	<dict>
